--- a/include/default_header.html
+++ b/include/default_header.html
@@ -5,7 +5,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-6">
                     <ul class="top_bar_social_links">
                         <li><a href="https://api.whatsapp.com/send/?phone=6282225855291&text&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i>0822-2585-5291</a></li>
-                        <li><i class="fas fa-envelope"></i><a href="mailto:admin@vpsindonesia.biz.id">admin@vpsindonesia.biz.id</a></li>
+                        <li><i class="fas fa-envelope"></i><a href="mailto:admin@vpsindonesia.id">admin@vpsindonesia.id</a></li>
                     </ul>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
