--- a/include/default_header.html
+++ b/include/default_header.html
@@ -11,7 +11,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-6">
                     <ul class="top_bar_contact_list">
                         <li><i class="fas fa-phone-volume"></i><a href="https://api.whatsapp.com/send/?phone=6282225855291&text=Halo saya mau tanya tentang Cloud Hosting&type=phone_number&app_absent=0">0822-2585-5291</a></li>
-                        <li><i class="fas fa-lock"></i><a href="https://client.vpsindonesia.web.id/login">Login</a></li>
+                        <li><i class="fas fa-lock"></i><a href="https://client.vpsindonesia.id/login">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -37,29 +37,29 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown06" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layanan</a>
                         <div class="dropdown-menu default_dd_menu">
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/cloud-vps-indonesia">Cloud VPS Indonesia</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/cloud-vps-netherland">Cloud VPS Netherland</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/cloud-hosting" target="_BLANK">Cloud Hosting</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/reseller-hosting" target="_BLANK">Reseller Hosting</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/license" target="_BLANK">License Server</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-vps-indonesia">Cloud VPS Indonesia</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-vps-netherland">Cloud VPS Netherland</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-hosting" target="_BLANK">Cloud Hosting</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/reseller-hosting" target="_BLANK">Reseller Hosting</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/license" target="_BLANK">License Server</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.web.id/domain-murah">Domain</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.web.id/faq">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.id/domain-murah">Domain</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.id/faq">FAQ</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown07" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Info</a>
                         <div class="dropdown-menu default_dd_menu">
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/faq">FAQ</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/affiliate">Affiliate</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.web.id/terms">Terms & Conditions</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/faq">FAQ</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/affiliate">Affiliate</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/terms">Terms & Conditions</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown08" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Member Area</a>
                         <div class="dropdown-menu default_dd_menu">
-                            <a class="dropdown-item" href="https://client.vpsindonesia.web.id/login">Login</a>
-                            <a class="dropdown-item" href="https://client.vpsindonesia.web.id/register.php">Register</a>
-                            <a class="dropdown-item" href="https://client.vpsindonesia.web.id/contact.php">Contact Us</a>
+                            <a class="dropdown-item" href="https://client.vpsindonesia.id/login">Login</a>
+                            <a class="dropdown-item" href="https://client.vpsindonesia.id/register.php">Register</a>
+                            <a class="dropdown-item" href="https://client.vpsindonesia.id/contact.php">Contact Us</a>
                         </div>
                     </li>                    
                 </ul>
