--- a/include/default_footer.html
+++ b/include/default_footer.html
@@ -4,41 +4,41 @@
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
                 <h5>Layanan Kami</h5>
                 <ul class="footer_links_list">
-                    <li><a href="https://vpsindonesia.web.id/cloud-vps-indonesia">Cloud VPS Indonesia</a></li>
-                    <li><a href="https://vpsindonesia.web.id/cloud-vps-netherland">Cloud VPS Netherland</a></li>
-                    <li><a href="https://vpsindonesia.web.id/cloud-hosting">Cloud Hosting</a></li>
-                    <li><a href="https://vpsindonesia.web.id/reseller-hosting">Reseller Hosting</a></li>
-                    <li><a href="https://vpsindonesia.web.id/domain-murah">Domain</a></li>
-                    <li><a href="https://vpsindonesia.web.id/License">License Server</a></li>
+                    <li><a href="https://vpsindonesia.id/cloud-vps-indonesia">Cloud VPS Indonesia</a></li>
+                    <li><a href="https://vpsindonesia.id/cloud-vps-netherland">Cloud VPS Netherland</a></li>
+                    <li><a href="https://vpsindonesia.id/cloud-hosting">Cloud Hosting</a></li>
+                    <li><a href="https://vpsindonesia.id/reseller-hosting">Reseller Hosting</a></li>
+                    <li><a href="https://vpsindonesia.id/domain-murah">Domain</a></li>
+                    <li><a href="https://vpsindonesia.id/License">License Server</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
                 <h5>Tentang Kami</h5>
                 <ul class="footer_links_list">
-                    <li><a href="https://vpsindonesia.web.id/faq">FAQ</a></li>
+                    <li><a href="https://vpsindonesia.id/faq">FAQ</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
                 <h5>Hubungi Kami</h5>
                 <ul class="footer_links_list">
-                    <li><a href="https://client.vpsindonesia.web.id/contact.php">Contact Us</a></li>
-                    <li><a href="https://client.vpsindonesia.web.id/submitticket.php?step=2&deptid=1">Submit A Ticket</a></li>
-                    <li><a href="https://vpsindonesia.web.id/terms">Terms & Conditions</a></li>
-                    <li><a href="https://vpsindonesia.web.id/affiliate">Affiliate</a></li>
+                    <li><a href="https://client.vpsindonesia.id/contact.php">Contact Us</a></li>
+                    <li><a href="https://client.vpsindonesia.id/submitticket.php?step=2&deptid=1">Submit A Ticket</a></li>
+                    <li><a href="https://vpsindonesia.id/terms">Terms & Conditions</a></li>
+                    <li><a href="https://vpsindonesia.id/affiliate">Affiliate</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
                 <h5>Vps Indonesia</h5>
                 <ul class="footer_links_list">
                     <li>Jl.Puspoengoro, Kab. Brebes, Brebes</li>
-                    <li><a href="mailto:admin@vpsindonesia.biz.id">Email : admin@vpsindonesia.biz.id</a></li>
+                    <li><a href="mailto:admin@vpsindonesia.id">Email : admin@vpsindonesia.id</a></li>
                     <li><a href="https://wa.me/6282225855291">WA :  0822-2585-5291</a></li>
                 </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6">
-                <div class="default_footer_copyright_box">© Copyright 2025 <a href="https://vpsindonesia.web.id">Vps Indonesia</a></div>
+                <div class="default_footer_copyright_box">© Copyright 2025 <a href="https://vpsindonesia.id">Vps Indonesia</a></div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 text-end">
                 
