--- a/include/default_header.html
+++ b/include/default_header.html
@@ -37,21 +37,21 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown06" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layanan</a>
                         <div class="dropdown-menu default_dd_menu">
-                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-vps-indonesia.html">Cloud VPS Indonesia</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-vps-netherland.html">Cloud VPS Netherland</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-hosting.html" target="_BLANK">Cloud Hosting</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.id/reseller-hosting.html" target="_BLANK">Reseller Hosting</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.id/license.html" target="_BLANK">License Server</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-vps-indonesia">Cloud VPS Indonesia</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-vps-netherland">Cloud VPS Netherland</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/cloud-hosting" target="_BLANK">Cloud Hosting</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/reseller-hosting" target="_BLANK">Reseller Hosting</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/license" target="_BLANK">License Server</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.id/domain-murah.html">Domain</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.id/faq.html">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.id/domain-murah">Domain</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://vpsindonesia.id/faq">FAQ</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown07" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Info</a>
                         <div class="dropdown-menu default_dd_menu">
-                            <a class="dropdown-item" href="https://vpsindonesia.id/faq.html">FAQ</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.id/affiliate.html">Affiliate</a>
-                            <a class="dropdown-item" href="https://vpsindonesia.id/terms.html">Terms & Conditions</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/faq">FAQ</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/affiliate">Affiliate</a>
+                            <a class="dropdown-item" href="https://vpsindonesia.id/terms">Terms & Conditions</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
