--- a/include/default_footer.html
+++ b/include/default_footer.html
@@ -4,18 +4,18 @@
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
                 <h5>Layanan Kami</h5>
                 <ul class="footer_links_list">
-                    <li><a href="https://vpsindonesia.id/cloud-vps-indonesia.html">Cloud VPS Indonesia</a></li>
-                    <li><a href="https://vpsindonesia.id/cloud-vps-netherland.html">Cloud VPS Netherland</a></li>
-                    <li><a href="https://vpsindonesia.id/cloud-hosting.html">Cloud Hosting</a></li>
-                    <li><a href="https://vpsindonesia.id/reseller-hosting.html">Reseller Hosting</a></li>
-                    <li><a href="https://vpsindonesia.id/domain-murah.html">Domain</a></li>
-                    <li><a href="https://vpsindonesia.id/License.html">License Server</a></li>
+                    <li><a href="https://vpsindonesia.id/cloud-vps-indonesia">Cloud VPS Indonesia</a></li>
+                    <li><a href="https://vpsindonesia.id/cloud-vps-netherland">Cloud VPS Netherland</a></li>
+                    <li><a href="https://vpsindonesia.id/cloud-hosting">Cloud Hosting</a></li>
+                    <li><a href="https://vpsindonesia.id/reseller-hosting">Reseller Hosting</a></li>
+                    <li><a href="https://vpsindonesia.id/domain-murah">Domain</a></li>
+                    <li><a href="https://vpsindonesia.id/License">License Server</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
                 <h5>Tentang Kami</h5>
                 <ul class="footer_links_list">
-                    <li><a href="https://vpsindonesia.id/faq.html">FAQ</a></li>
+                    <li><a href="https://vpsindonesia.id/faq">FAQ</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
@@ -23,8 +23,8 @@
                 <ul class="footer_links_list">
                     <li><a href="https://client.vpsindonesia.id/contact.php">Contact Us</a></li>
                     <li><a href="https://client.vpsindonesia.id/submitticket.php?step=2&deptid=1">Submit A Ticket</a></li>
-                    <li><a href="https://vpsindonesia.id/terms.html">Terms & Conditions</a></li>
-                    <li><a href="https://vpsindonesia.id/affiliate.html">Affiliate</a></li>
+                    <li><a href="https://vpsindonesia.id/terms">Terms & Conditions</a></li>
+                    <li><a href="https://vpsindonesia.id/affiliate">Affiliate</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 default_footer_links_box">
